Fixed margins and Y overflow allowed

--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -12,7 +12,7 @@
 @import 'colors';
 
 body{
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: #01110c;
 }
 
@@ -44,7 +44,7 @@ body{
     background-color: #fff;
     font-weight: bold;
     &:hover{
-        background-color:rgba(150, 150, 150);
+        background-color:rgba(150, 150, 150,1);
     }
 }
 
@@ -95,7 +95,7 @@ body{
 .holes{
     position: absolute;
     width: 100vw;
-    top: 10px;
+    top: 0px;
     left: 100vw;
     transition: 0.3s ease-in-out;
 }
@@ -103,7 +103,7 @@ body{
 .processes_num{
     position: absolute;
     width: 100vw;
-    top: 10px;
+    top: 0px;
     left: 100vw;
     transition: 0.3s ease-in-out;
 }
@@ -111,7 +111,7 @@ body{
 .processes{
     position: absolute;
     width: 100vw;
-    top: 10px;
+    top:0;
     left: 100vw;
     transition: 0.3s;
 }
@@ -119,7 +119,7 @@ body{
 .select_algo{
     position: absolute;
     width: 100vw;
-    top: 10px;
+    top: 0;
     left: 100vw;
     transition: 0.3s;
 }
@@ -127,7 +127,7 @@ body{
 .result{
     position: absolute;
     width: 100vw;
-    top: 10px;
+    top: 0;
     left: 100vw;
     transition: 0.3s;
     display: flex;
@@ -153,6 +153,7 @@ input{
     border-radius: 20px;
     outline: none;
     color: black;
+    border:none ;
 }
 
 input::-webkit-outer-spin-button,
@@ -184,15 +185,15 @@ form {
     position: relative;
     max-width: 70vw;
     margin: 10px auto;
-    padding: 25px 0;
+    margin-top: 0;
+    padding: 20px 0;
 }
 
 select {
     display: block;
     width: 165px;
-    height: 30px;
+    height: 23px;
     margin: auto;
-    margin-top: -30px;
     margin-bottom: 1.6em;
     padding: 0 5px;
     cursor: pointer;
